--- a/examples/components/cards.html
+++ b/examples/components/cards.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:wght@200;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="../../dist/reset.css" rel="stylesheet" />
-    <link href="../../dist/preons.css" rel="stylesheet" />
+    <link href="https://unpkg.com/preons/dist/reset.css" rel="stylesheet" />
+    <link href="https://unpkg.com/preons/dist/preons.css" rel="stylesheet" />
   </head>
 
   <body>
